# python_100_day_bootcamp

./: .gitattributes  .gitignore  README.md  pyproject.toml
NIvel - Iniciante dia 1 a 14/dia 1/: exercicio_2.py  projeto_gerador_nomes.py
NIvel - Iniciante dia 1 a 14/dia 13/: exercicio_2.py  procurando_o_bug.py
NIvel - Iniciante dia 1 a 14/dia 14/: arte.py  base_dados.py  projeto_fim_iniciante.py
NIvel - Iniciante dia 1 a 14/dia 2/: calculado_gorjeta.py  exercicio_2.py
NIvel - Iniciante dia 1 a 14/dia 3/: exercicio_2.py  exercicio_3.py  ilha_do_tesouro.py
NIvel - Iniciante dia 1 a 14/dia 4/: projeto_papel_pedra_tesoura.py
NIvel - Iniciante dia 1 a 14/dia 5/: exercicio_2.py
NIvel - Iniciante dia 1 a 14/dia 6/: fluxo_jogo_forca.drawio  jogo_forca.py  jogo_forca_palavras.py
NIvel - Iniciante dia 1 a 14/dia 8/: exercicio_2.py
NIvel - Iniciante dia 1 a 14/dia 9/: Diagrama sem nome.drawio
Nivel - Avançado dia 59 a 80/dia 59 e 60/: main.py  package-lock.json
Nivel - Avançado dia 59 a 80/dia 63/: livros.db  main.py
Nivel - Avançado dia 59 a 80/dia 72/: programação_linguas_mais_populares.ipynb
Nivel - Avançado dia 59 a 80/dia 73/: Lego_Analysis_for_Course.ipynb
Nivel - Intermediario dia 15 a 58/dia 15/: projeto_maquina_cafe.py
Nivel - Intermediario dia 15 a 58/dia 16/: inciando_poo.py  menu.py
Nivel - Intermediario dia 15 a 58/dia 17/: data.py  questoes_jogo.py
Nivel - Intermediario dia 15 a 58/dia 18/: main.py
Nivel - Intermediario dia 15 a 58/dia 19/: lousa_giz.py
Nivel - Intermediario dia 15 a 58/dia 21/: palito.py  pontuação.py
Nivel - Intermediario dia 15 a 58/dia 22/: carro.py  placar.py
Nivel - Intermediario dia 15 a 58/dia 23/: pontuacao.py
Nivel - Intermediario dia 15 a 58/dia 25/: achando_coor_do_mapa.py  main.py
Nivel - Intermediario dia 15 a 58/dia 27/: main.py
Nivel - Intermediario dia 15 a 58/dia 28/: main.py
(+145 files in other folders)
