[tool.poetry]
name = "python_100_day_bootcamp"
version = "0.1.0"
description = ""
authors = ["Igor Esposito <sposigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.11.1"
replit = "^3.2.4"
tqdm = "^4.62.3"
prettytable = "^2.4.0"
pandas = "^1.3.5"
pyperclip = "^1.8.2"
twilio = "^7.5.0"
beautifulsoup4 = "^4.10.0"
spotipy = "^2.19.0"
lxml = "^4.7.1"
selenium = "^4.1.0"
geckodriver-autoinstaller = "^0.1.0"
pynput = "^1.7.6"
Flask = "^2.0.2"
Flask-WTF = "^1.0.0"
Flask-Bootstrap = "^3.3.7"
WTForms = "^3.0.1"
email-validator = "^1.1.3"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.31"
jupyter = "^1.0.0"
notebook = "^6.4.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
